feat(ws): send to user